--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prettier-format && npm run lint",
-      "pre-push": "",
-      "...": "..."
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run build"
     }
   },
   "dependencies": {
